fix white space at bottom of page

--- a/app/assets/stylesheets/alerts.scss
+++ b/app/assets/stylesheets/alerts.scss
@@ -6,15 +6,18 @@ html, body {
   height: 100%;
 }
 
+body {
+  background-color: #EAEFF4;
+}
+
 .priceInfoBanner {
   border-bottom: 1px solid black;
   text-align: center;
+  border-radius: 0;
 }
 
 .container-fluid {
   text-align: center;
-  background-color: #EAEFF4;
-  height: 100%;
 }
 
 .topContainer {
@@ -22,7 +25,6 @@ html, body {
   .alertFormContainer {
     display: inline-block;
     border: 1px solid #2E2F30;
-    border-radius: 12px;
     background-color: #EFEFEF;
     padding: 10px;
     margin-top: 30px;
